# TheLastKeep

./: .gitignore  7月10日dev.md  7月12日dev.md  7月9日重构相关说明.md  MERGE_FIX.md  README.md  crash-investigation-and-stability-fixes.md  dev.md  windows-release-packaging-guide.md  结算页面切换闪退的解决方案.md  页面切换的解决方案.md
DesignDoc/: Drawing 2026-07-06 16.38.23.excalidraw.md  TheLastKeep最后的要塞-架构设计.md  structureDesign.cpp
TheLastKeep/: CMakeLists.txt  Mainwindow.cpp  TheLastKeep.pro  bullet.cpp  card.cpp  card.h  cardmanager.cpp  castle.cpp  enemy.cpp  gamecontroller.cpp  gamecontroller.h  gamescene.cpp  gamescene.h  gamescene.ui  main.cpp  mainwindow.h  resource.qrc  tower.cpp
TheLastKeep/resources/: resources.qrc  story.txt  story_level01.txt  story_level02.txt  story_level03.txt
TheLastKeep/resources/images/: keep_placeholder.txt
TheLastKeep/src/: main.cpp
TheLastKeep/src/card/: Card.cpp  Card.h  CardManager.cpp  CardManager.h
TheLastKeep/src/common/: GameConstants.h  GameTypes.h  Result.h
TheLastKeep/src/core/: BattleSystem.cpp  BattleSystem.h  CollisionSystem.cpp  CollisionSystem.h  GameController.cpp  GameController.h  StateManager.cpp  StateManager.h
TheLastKeep/src/data/: ConfigManager.h  ResourceManager.cpp  SaveManager.h  SoundManager.cpp  SoundManager.h
TheLastKeep/src/entity/: Bullet.cpp  Bullet.h  Castle.cpp  Castle.h  Enemy.cpp  Enemy.h  Tower.cpp  Tower.h
TheLastKeep/src/game/: GameMap.cpp  GameMap.h  GameScene.cpp  GameScene.h  LevelData.cpp  LevelData.h  LevelManager.cpp  LevelManager.h  bullet.cpp  bullet.h  card.cpp  cardmanager.cpp  cardmanager.h  castle.cpp  castle.h  enemy.cpp  enemy.h  gamecontroller.cpp  tower.cpp  tower.h
TheLastKeep/src/level/: LevelData.cpp  LevelData.h  LevelManager.cpp  LevelManager.h
TheLastKeep/src/map/: GameMap.cpp  GameMap.h  Tile.h
TheLastKeep/src/scene/: GameScene.cpp  GameScene.h
TheLastKeep/src/ui/: MainWindow.cpp  MainWindow.h  Mainwindow.cpp  Mainwindow.h
TheLastKeep/src/ui/pages/: GamePage.cpp  GamePage.h  LevelSelectPage.cpp  LevelSelectPage.h  ResultPage.cpp  ResultPage.h  SettingsPage.cpp  SettingsPage.h  StartPage.cpp  StartPage.h  StoryPage.cpp  StoryPage.h
TheLastKeep/src/ui/widgets/: CardSelectWidget.cpp  CardSelectWidget.h  HUDWidget.cpp  HUDWidget.h  PauseOverlay.h
